# mvg-backend

./: .env-template  .gitignore  Dockerfile  Makefile  docker-compose.yaml  openapi-config.json  openapi.json  openapi.yaml  package.json  pyproject.toml
.github/workflows/: publish.yaml
k8s/base/: backend-config.yaml  backend-deployment.yaml  backend-service.yaml  ingres.yaml  kustomization.yaml  namespace.yaml  pgadmin-deployment.yaml  pgadmin-ingres.yaml  pgadmin-service.yaml  postgres-config.yaml  postgres-secret.yaml  postgres-service.yaml  postgres-set.yaml
src/: auth_utils.py  database.py  kicker_elo.py  main.py  minio_client.py  rbac.py
src/models/: __init__.py  auth.py  cal_link.py  cards.py  chug.py  dates.py  drink.py  event.py  kicker_match.py  member.py  mkm.py  quote.py  quote_rotation.py  recipe.py
src/repositories/: __init__.py  auth.py  base.py  calendar.py  card.py  chug.py  dates.py  drink.py  event.py  kicker.py  member.py  mkm.py  quote.py  quote_rotation.py  recipe.py
src/routes/: __init__.py  auth.py  card.py  chug.py  date.py  events.py  kicker.py  member.py  mkm.py  quotes.py  recipes.py
src/schemas/: __init__.py  card.py  chug.py  date.py  drink.py  event.py  kicker_match.py  member.py  mkm.py  quote.py  recipe.py
src/services/: event.py
tools/: generate_spec.py  test_minio.py
ts-client/.openapi-generator/: FILES
ts-client/apis/: AuthApi.ts  CardApi.ts  ChuggingApi.ts  DrinksApi.ts  EventsApi.ts  MembersApi.ts  QuotesApi.ts  index.ts
ts-client/models/: BaseChug.ts  CreateCard.ts  Drink.ts  Event.ts  EventCreate.ts  Member.ts  Quote.ts  QuoteCreate.ts  ResponseGetDrinksForEventEventsEventIdDrinksGet.ts  ResponseGetDrinksForEventMembersMemberIdDrinksGet.ts  TokenRefreshRequest.ts  UploadChug.ts  index.ts
