[tool.poetry]
name = "mvg-backend"
version = "0.1.0"
description = ""
authors = ["linuseing <linus@r13.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
pydantic = "^2.7.0"
sqlalchemy = "^2.0.29"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
databases = "^0.9.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
apscheduler = "^3.10.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
